--- a/app/generator.html
+++ b/app/generator.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Генератор КП | Dashboard</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 </head>
@@ -20,7 +20,7 @@
             </div>
 
             <nav class="nav-menu">
-                <a href="./index.html" class="nav-item">
+                <a href="/" class="nav-item">
                     <i class="fa-solid fa-grid-2"></i>
                     Дашборд
                 </a>
@@ -44,7 +44,7 @@
             <div class="top-bar">
                 <div class="page-title">Редактор КП</div>
                 <div class="actions">
-                    <a href="./index.html" class="btn btn-outline" style="padding: 0.5rem 1rem; font-size: 0.8rem;">
+                    <a href="/" class="btn btn-outline" style="padding: 0.5rem 1rem; font-size: 0.8rem;">
                         <i class="fa-solid fa-arrow-left"></i> Назад
                     </a>
                 </div>
@@ -89,7 +89,7 @@
         </main>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
