--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KP Generator | Dashboard</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -55,7 +55,7 @@
             <div class="content-scroll-area">
                 <div class="dashboard-grid">
                     <!-- Card 1: Logo -->
-                    <a href="./generator.html?type=logo" class="kp-card">
+                    <a href="/generator.html?type=logo" class="kp-card">
                         <div class="card-icon" style="color: #a855f7;">
                             <i class="fa-solid fa-pen-nib"></i>
                         </div>
@@ -69,7 +69,7 @@
                     </a>
 
                     <!-- Card 2: Website -->
-                    <a href="./generator.html?type=website" class="kp-card">
+                    <a href="/generator.html?type=website" class="kp-card">
                         <div class="card-icon" style="color: #3b82f6;">
                             <i class="fa-solid fa-globe"></i>
                         </div>
@@ -83,7 +83,7 @@
                     </a>
 
                     <!-- Card 3: Express -->
-                    <a href="./generator.html?type=express" class="kp-card">
+                    <a href="/generator.html?type=express" class="kp-card">
                         <div class="card-icon" style="color: #10b981;">
                             <i class="fa-solid fa-bolt"></i>
                         </div>
