--- a/app/generator.html
+++ b/app/generator.html
@@ -74,6 +74,9 @@
                 <!-- Right Panel: Preview -->
                 <div class="preview-panel">
                     <div class="toolbar">
+                        <button type="button" id="btnDownload" class="btn btn-primary">
+                            <i class="fa-solid fa-download"></i> Скачать PDF
+                        </button>
                         <button id="btnPrint" class="btn btn-primary">
                             <i class="fa-solid fa-print"></i> Печать
                         </button>
